# cv_img_proc

./: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
depends/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
depends/opencv/lib/: libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.17  libopencv_core.so.3.4  libopencv_features2d.so.3.4  libopencv_features2d.so.3.4.17  libopencv_flann.so.3.4  libopencv_flann.so.3.4.17  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.17  libopencv_imgcodecs.so.3.4  libopencv_imgcodecs.so.3.4.17  libopencv_imgproc.so.3.4
depends/opencv/lib/pkgconfig/: opencv.pc
depends/opencv/share/OpenCV/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
include/: imgproc.h
scripts/: get_gtest.sh  get_opencv.sh
src/: CMakeLists.txt  circle.cpp
src/include/: common.h
test/: CMakeLists.txt  main.cpp  test_circle.cpp  test_io.cpp
